colocado botao dinamico modo escuro

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header  class="d-flex flex-wrap justify-content-center py-3 mb-5 border-bottom sticky-top bg-light">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
       
-            <span class="fs-4 fw-bold"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+            <span class="fs-4 fw-bold text-primary"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
               <i class="mdi mdi-dog"></i>
               Donguinho's</font></font></span>
           </a>
