--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="light">
+<html lang="pt-br" data-bs-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,7 +66,7 @@
                     </h2>
                 </div>
              </div>
-            <div class="row border mt-5">
+            <div class="row  mt-5">
               <div class="col-lg-4 mt-5">
                 <img class="border rounded-circle p-5 shadow" src="img/vacina.png" alt="img-seringa">
                 <h2 class="fw-normal mt-3"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Vacinação</font></font></h2>
